--- a/roles/hardening/defaults/main.yml
+++ b/roles/hardening/defaults/main.yml
@@ -34,7 +34,7 @@ os_security_suid_sgid_remove_from_unknown: false
 
 # remove packages with known issues
 os_security_packages_clean: true
-os_security_packages_list: ['xinetd','inetd','ypserv','telnet-server','rsh-server', 'prelink']
+os_security_packages_list: ['xinetd','inetd','ypserv', 'prelink', 'avahi-*', 'rsh*', 'talk*', 'telnet*', 'tftp*', 'yp-tools', 'ypbind']
 
 # Allow interactive startup (rhel, centos)
 os_security_init_prompt: true
