package update task

--- a/roles/hardening/handlers/main.yml
+++ b/roles/hardening/handlers/main.yml
@@ -3,4 +3,10 @@
   become: yes
   become_method: sudo
   command: systemctl daemon-reload
+
+- name: apt-get clean
+  become: yes
+  become_method: sudo
+  apt:
+    autoclean: yes
 ...
