--- a/roles/hardening/handlers/main.yml
+++ b/roles/hardening/handlers/main.yml
@@ -9,4 +9,10 @@
   become_method: sudo
   apt:
     autoclean: yes
+
+- name: apt-get autoremove
+  become: yes
+  become_method: sudo
+  apt:
+    autoremove: yes
 ...
