--- a/roles/hardening/defaults/main.yml
+++ b/roles/hardening/defaults/main.yml
@@ -248,4 +248,7 @@ fallback_ntp: 2.ubuntu.pool.ntp.org 3.ubuntu.pool.ntp.org
 dns: 127.0.0.1
 fallback_dns: 208.67.222.222 208.67.220.220
 dnssec: allow-downgrade
+
+# grub cmdline for auditd support
+grub_cmdline: audit=1
 ...
