--- a/roles/hardening/handlers/main.yml
+++ b/roles/hardening/handlers/main.yml
@@ -15,4 +15,16 @@
   become_method: sudo
   apt:
     autoremove: yes
+
+# https://github.com/ansible/ansible/issues/22171
+- name: restart auditd
+  become: yes
+  become_method: sudo
+  command: service auditd restart
+
+- name: generate auditd
+  become: yes
+  become_method: sudo
+  command: augenrules
+
 ...
