vtools does not work for centos yet

--- a/roles/hardening/tasks/vtools.yml
+++ b/roles/hardening/tasks/vtools.yml
@@ -8,6 +8,7 @@
     install_recommends: no
   with_items:
     - open-vm-tools
+  when: ansible_os_family == "Debian"
   tags:
     - apt
     - packages
